--- a/index.html.html
+++ b/index.html.html
@@ -79,7 +79,7 @@
                 <div class="swiper-pagination slider__pagination "></div>
             </div>
 
-            <button id="slider__btn-show-more " class="slider__btn-show-more ">Показать все</button>
+            <button class="slider__btn-show-more ">Показать все</button>
 
         </article>
     </main>
